--- a/Over9000Project/ComputerStoreAPI/Web.config
+++ b/Over9000Project/ComputerStoreAPI/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ComputerStoreAPI-20200423111333.mdf;Initial Catalog=aspnet-ComputerStoreAPI-20200423111333;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Over9000Project;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
