--- a/Over9000Project/Over9000.Data/Over9000.Data.csproj
+++ b/Over9000Project/Over9000.Data/Over9000.Data.csproj
@@ -88,7 +88,7 @@
     <Compile Include="AccountHistory.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Product.cs" />
-    <Compile Include="ProductReviews.cs" />
+    <Compile Include="ProductReview.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavedPaymentInformation.cs" />
   </ItemGroup>
