--- a/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
+++ b/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
@@ -306,6 +306,20 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Over9000.Data\Over9000.Data.csproj">
+      <Project>{6e667c2e-655d-4dee-9bcc-d9c045e6d5ef}</Project>
+      <Name>Over9000.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Over9000.Models\Over9000.Models.csproj">
+      <Project>{e5a48afc-d6f4-4c42-8282-56b67e22df56}</Project>
+      <Name>Over9000.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Over9000.Services\Over9000.Services.csproj">
+      <Project>{fc45250d-633c-486e-9c15-91b6e3f75dfb}</Project>
+      <Name>Over9000.Services</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
