--- a/Over9000Project/Over9000.Models/Over9000.Models.csproj
+++ b/Over9000Project/Over9000.Models/Over9000.Models.csproj
@@ -57,22 +57,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountCreate.cs" />
-    <Compile Include="AccountEdit.cs" />
-    <Compile Include="AccountHistoryAdd.cs" />
-    <Compile Include="AccountHistoryEdit.cs" />
-    <Compile Include="AccountHistoryListItem.cs" />
-    <Compile Include="AccountListItem.cs" />
-    <Compile Include="ProductListItem.cs" />
-    <Compile Include="ProductAdd.cs" />
-    <Compile Include="ProductEdit.cs" />
-    <Compile Include="ProductReviewsAdd.cs" />
-    <Compile Include="ProductReviewsEdit.cs" />
-    <Compile Include="ProductReviewsListItem.cs" />
+    <Compile Include="AccountCreateModel\AccountCreate.cs" />
+    <Compile Include="AccountCreateModel\AccountEdit.cs" />
+    <Compile Include="AccountHistoryModel\AccountHistoryAdd.cs" />
+    <Compile Include="AccountHistoryModel\AccountHistoryEdit.cs" />
+    <Compile Include="AccountHistoryModel\AccountHistoryListItem.cs" />
+    <Compile Include="AccountCreateModel\AccountListItem.cs" />
+    <Compile Include="ProductModel\ProductListItem.cs" />
+    <Compile Include="ProductModel\ProductAdd.cs" />
+    <Compile Include="ProductModel\ProductEdit.cs" />
+    <Compile Include="ProductReviewModel\ProductReviewsAdd.cs" />
+    <Compile Include="ProductReviewModel\ProductReviewsEdit.cs" />
+    <Compile Include="ProductReviewModel\ProductReviewsListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SavedPaymentInformationCreate.cs" />
-    <Compile Include="SavedPaymentInformationEdit.cs" />
-    <Compile Include="SavedPaymentInformationListItem.cs" />
+    <Compile Include="SavedPaymentModel\SavedPaymentInformationCreate.cs" />
+    <Compile Include="SavedPaymentModel\SavedPaymentInformationEdit.cs" />
+    <Compile Include="SavedPaymentModel\SavedPaymentInformationListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
