--- a/Over9000Project/Over9000.Data/Over9000.Data.csproj
+++ b/Over9000Project/Over9000.Data/Over9000.Data.csproj
@@ -87,13 +87,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="AccountHistory.cs" />
+    <Compile Include="AccountDO_NOT_USE.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductReview.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavedPaymentInformation.cs" />
+    <Compile Include="Service.cs" />
+    <Compile Include="ServiceReview.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
