--- a/Over9000Project/Over9000.Services/Over9000.Services.csproj
+++ b/Over9000Project/Over9000.Services/Over9000.Services.csproj
@@ -62,6 +62,8 @@
     <Compile Include="ProductServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavedPaymentInformationServices.cs" />
+    <Compile Include="ServiceReviewServices.cs" />
+    <Compile Include="ServiceServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
