--- a/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
+++ b/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
@@ -214,6 +214,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SavedPaymentController.cs" />
+    <Compile Include="Controllers\ServiceController.cs" />
+    <Compile Include="Controllers\ServiceReviewController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
