--- a/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
+++ b/Over9000Project/ComputerStoreAPI/ComputerStoreAPI.csproj
@@ -213,6 +213,8 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ProductReviewController.cs" />
     <Compile Include="Controllers\SavedPaymentController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="Controllers\ServiceReviewController.cs" />
