Commit with screenshot

--- a/Over9000Project/ReadMe/ReadMe.csproj
+++ b/Over9000Project/ReadMe/ReadMe.csproj
@@ -46,5 +46,8 @@
   <ItemGroup>
     <Content Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
